[package]
name = "scrumble"
version = "0.2.0"
description = "A Tauri App"
authors = ["Zach Bauer"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "window-all", "shell-all", "path-all", "clipboard-all", "app-all", "os-all", "fs-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.3.2"
window-shadows = "0.2.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
